# tonic-hello-tls

./: Cargo.toml  Dockerfile  fly.toml
migrations/2023-09-12-155328_create_messages_table/: up.sql
proto/: helloworld.proto
src/: db.rs  greeter.rs  lib.rs  main.rs  messages.rs  schema.rs
